# SignalScope

./: .env.example  .gitignore  README.md  package.json
apps/api/: pyproject.toml
apps/api/signalscope/: __init__.py  cli.py  config.py  main.py
apps/api/signalscope/routers/: api.py
apps/api/signalscope/schemas/: __init__.py  models.py
apps/api/signalscope/services/: __init__.py  anomaly.py  metrics.py  parsing.py  pipeline.py  segmentation.py  storage.py  summaries.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/analysis/[id]/: page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/components/: Nav.tsx  SignalChart.tsx
apps/web/src/lib/: api.ts
data/: sample_drift_asymmetry.csv  sample_stable.csv
docs/: ARCHITECTURE.md
scripts/: generate_samples.py
