[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalscope"
version = "0.1.0"
description = "SignalScope API and CLI — time-series analysis for engineers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "typer>=0.12.0",
]

[project.scripts]
signalscope = "signalscope.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["signalscope*"]

[tool.setuptools.package-data]
signalscope = ["py.typed"]
